Change doc template to no print null missing values.
* Now docs won't include null, "", or [] in the default value list.

--- a/src/main/resources/org/broadinstitute/hellbender/utils/helpTemplates/generic.template.html
+++ b/src/main/resources/org/broadinstitute/hellbender/utils/helpTemplates/generic.template.html
@@ -51,7 +51,11 @@
 						</#if>
 					</td>
 					<!--<td>${arg.type}</td> -->
-					<td>${arg.defaultValue!"NA"}</td>
+					<#if arg.defaultValue != "null" && arg.defaultValue != "[]" && arg.defaultValue != "\"\"">
+						<td>${arg.defaultValue}</td>
+					<#else>
+						<td></td>
+					</#if>
 					<td>${arg.summary}</td>
 				</tr>
 			</#list>
