Fix WDL test dummy version number.

--- a/src/test/resources/org/broadinstitute/hellbender/utils/wdltest/index.html
+++ b/src/test/resources/org/broadinstitute/hellbender/utils/wdltest/index.html
@@ -32,7 +32,7 @@
             <div class="col-md-6">
                 <div class="btn-group pull-right" style='margin-top:14px;'>
                     <a class="btn btn-warning dropdown-toggle" data-toggle="dropdown" href="#">
-                        Version 1.1-111
+                        Version 1.2.3.4
                         <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
@@ -46,7 +46,7 @@
 
         <div class="hide_me_html">
             <hr />
-            <em>Showing docs for version 1.1-111 | The latest version is <?php print $latest_version; ?></em>
+            <em>Showing docs for version 1.2.3.4 | The latest version is <?php print $latest_version; ?></em>
             <hr />
         </div>
 
@@ -88,7 +88,7 @@
         	<a href="https://gatkforums.broadinstitute.org/gatk/">Support Forum</a>
         </p>
 
-        <p class="version">GATK version 1.1-111 built at 2016/11/11 11:11:11.
+        <p class="version">GATK version 1.2.3.4 built at 2016/11/11 11:11:11.
         </p>
 
 </div></div>
